// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reloptions.sql > line 2 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 30,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 60,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "false",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_enabled",
                "location": 76,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "Float": {
                    "fval": "0.2",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_analyze_scale_factor",
                "location": 104,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 31,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 47,
                "typeName": {
                  "location": 49,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 5 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              "location": 43,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 45,
                      "sval": {
                        "sval": "reloptions_test",
                      },
                    },
                  },
                  "location": 62,
                  "typeName": {
                    "location": 64,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 6 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 2,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 74,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 44,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 61,
                "typeName": {
                  "location": 63,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 110,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 44,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 31,
                "typeName": {
                  "location": 33,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 10 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Float": {
                    "fval": "-10.0",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_analyze_scale_factor",
                "location": 44,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 31,
                "typeName": {
                  "location": 33,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 11 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Float": {
                    "fval": "110.0",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_analyze_scale_factor",
                "location": 44,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 31,
                "typeName": {
                  "location": 33,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 12 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 2,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "not_existing_option",
                "location": 92,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 62,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 79,
                "typeName": {
                  "location": 81,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 2,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "defnamespace": "not_existing_namespace",
                "location": 44,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 31,
                "typeName": {
                  "location": 33,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Float": {
                    "fval": "-30.1",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 83,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 53,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 70,
                "typeName": {
                  "location": 72,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "string",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 44,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 31,
                "typeName": {
                  "location": 33,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 20 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "true",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 44,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 31,
                "typeName": {
                  "location": 33,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 12,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_enabled",
                "location": 44,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 31,
                "typeName": {
                  "location": 33,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Float": {
                    "fval": "30.5",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_enabled",
                "location": 44,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 31,
                "typeName": {
                  "location": 33,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 23 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "string",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_enabled",
                "location": 44,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 31,
                "typeName": {
                  "location": 33,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "string",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_analyze_scale_factor",
                "location": 44,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 31,
                "typeName": {
                  "location": 33,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 25 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "true",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_analyze_scale_factor",
                "location": 44,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 31,
                "typeName": {
                  "location": 33,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 30,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 82,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 40,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 97,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 52,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 69,
                "typeName": {
                  "location": 71,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 29 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 106,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 76,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 93,
                "typeName": {
                  "location": 95,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 32 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "List": {
                    "items": [
                      {
                        "DefElem": {
                          "arg": {
                            "Integer": {
                              "ival": 31,
                            },
                          },
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "fillfactor",
                          "location": 57,
                        },
                      },
                      {
                        "DefElem": {
                          "arg": {
                            "Float": {
                              "fval": "0.3",
                            },
                          },
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "autovacuum_analyze_scale_factor",
                          "location": 73,
                        },
                      },
                    ],
                  },
                },
                "subtype": "AT_SetRelOptions",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 36,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              "location": 43,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 45,
                      "sval": {
                        "sval": "reloptions_test",
                      },
                    },
                  },
                  "location": 62,
                  "typeName": {
                    "location": 64,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 37 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "List": {
                    "items": [
                      {
                        "DefElem": {
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "autovacuum_enabled",
                          "location": 90,
                        },
                      },
                      {
                        "DefElem": {
                          "arg": {
                            "Integer": {
                              "ival": 32,
                            },
                          },
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "fillfactor",
                          "location": 110,
                        },
                      },
                    ],
                  },
                },
                "subtype": "AT_SetRelOptions",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 69,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 40 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              "location": 43,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 45,
                      "sval": {
                        "sval": "reloptions_test",
                      },
                    },
                  },
                  "location": 62,
                  "typeName": {
                    "location": 64,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "List": {
                    "items": [
                      {
                        "DefElem": {
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "fillfactor",
                          "location": 68,
                        },
                      },
                    ],
                  },
                },
                "subtype": "AT_ResetRelOptions",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 45,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              "location": 43,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 45,
                      "sval": {
                        "sval": "reloptions_test",
                      },
                    },
                  },
                  "location": 62,
                  "typeName": {
                    "location": 64,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 45 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "List": {
                    "items": [
                      {
                        "DefElem": {
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "autovacuum_enabled",
                          "location": 94,
                        },
                      },
                      {
                        "DefElem": {
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "autovacuum_analyze_scale_factor",
                          "location": 115,
                        },
                      },
                    ],
                  },
                },
                "subtype": "AT_ResetRelOptions",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 71,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 49 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "BoolExpr": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "oid",
                            },
                          },
                        ],
                        "location": 39,
                      },
                    },
                    "location": 43,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "TypeCast": {
                        "arg": {
                          "A_Const": {
                            "location": 45,
                            "sval": {
                              "sval": "reloptions_test",
                            },
                          },
                        },
                        "location": 62,
                        "typeName": {
                          "location": 64,
                          "names": [
                            {
                              "String": {
                                "sval": "regclass",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                      },
                    },
                  },
                },
                {
                  "NullTest": {
                    "arg": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "reloptions",
                            },
                          },
                        ],
                        "location": 84,
                      },
                    },
                    "location": 95,
                    "nulltesttype": "IS_NULL",
                  },
                },
              ],
              "boolop": "AND_EXPR",
              "location": 73,
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 51 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "List": {
                    "items": [
                      {
                        "DefElem": {
                          "arg": {
                            "Integer": {
                              "ival": 12,
                            },
                          },
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "fillfactor",
                          "location": 76,
                        },
                      },
                    ],
                  },
                },
                "subtype": "AT_ResetRelOptions",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 53,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "reloptions_test",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 57 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "false",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "vacuum_truncate",
                "location": 67,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "false",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "vacuum_truncate",
                "defnamespace": "toast",
                "location": 91,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "false",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_enabled",
                "location": 121,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 20,
            "relname": "reloptions_test",
            "relpersistence": "t",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "constraints": [
                  {
                    "Constraint": {
                      "contype": "CONSTR_NOTNULL",
                      "location": 42,
                    },
                  },
                ],
                "is_local": true,
                "location": 36,
                "typeName": {
                  "location": 38,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "j",
                "is_local": true,
                "location": 52,
                "typeName": {
                  "location": 54,
                  "names": [
                    {
                      "String": {
                        "sval": "text",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 62 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              "location": 43,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 45,
                      "sval": {
                        "sval": "reloptions_test",
                      },
                    },
                  },
                  "location": 62,
                  "typeName": {
                    "location": 64,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 63 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 37,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 40,
                        },
                      },
                    ],
                  },
                },
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 48,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 54,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 64 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VacuumStmt": {
          "is_vacuumcmd": true,
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "freeze",
                "location": 62,
              },
            },
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "disable_page_skipping",
                "location": 70,
              },
            },
          ],
          "rels": [
            {
              "VacuumRelation": {
                "relation": {
                  "inh": true,
                  "location": 93,
                  "relname": "reloptions_test",
                  "relpersistence": "p",
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 66 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "location": 25,
                              "sval": {
                                "sval": "reloptions_test",
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "pg_relation_size",
                            },
                          },
                        ],
                        "location": 8,
                      },
                    },
                    "location": 44,
                    "name": [
                      {
                        "String": {
                          "sval": ">",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 46,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 67 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 25,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 40,
                },
              },
              "location": 44,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "SubLink": {
                  "location": 47,
                  "subLinkType": "EXPR_SUBLINK",
                  "subselect": {
                    "SelectStmt": {
                      "fromClause": [
                        {
                          "RangeVar": {
                            "inh": true,
                            "location": 74,
                            "relname": "pg_class",
                            "relpersistence": "p",
                          },
                        },
                      ],
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 55,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "reltoastrelid",
                                    },
                                  },
                                ],
                                "location": 55,
                              },
                            },
                          },
                        },
                      ],
                      "whereClause": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "oid",
                                  },
                                },
                              ],
                              "location": 90,
                            },
                          },
                          "location": 94,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 96,
                                  "sval": {
                                    "sval": "reloptions_test",
                                  },
                                },
                              },
                              "location": 113,
                              "typeName": {
                                "location": 115,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "regclass",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 71 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "List": {
                    "items": [
                      {
                        "DefElem": {
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "vacuum_truncate",
                          "location": 37,
                        },
                      },
                    ],
                  },
                },
                "subtype": "AT_ResetRelOptions",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 73 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              "location": 43,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 45,
                      "sval": {
                        "sval": "reloptions_test",
                      },
                    },
                  },
                  "location": 62,
                  "typeName": {
                    "location": 64,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 74 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 37,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 40,
                        },
                      },
                    ],
                  },
                },
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 48,
                        },
                      },
                      {
                        "A_Const": {
                          "isnull": true,
                          "location": 54,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 75 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "VacuumStmt": {
          "is_vacuumcmd": true,
          "options": [
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "freeze",
                "location": 62,
              },
            },
            {
              "DefElem": {
                "defaction": "DEFELEM_UNSPEC",
                "defname": "disable_page_skipping",
                "location": 70,
              },
            },
          ],
          "rels": [
            {
              "VacuumRelation": {
                "relation": {
                  "inh": true,
                  "location": 93,
                  "relname": "reloptions_test",
                  "relpersistence": "p",
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "A_Const": {
                              "location": 25,
                              "sval": {
                                "sval": "reloptions_test",
                              },
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "pg_relation_size",
                            },
                          },
                        ],
                        "location": 8,
                      },
                    },
                    "location": 44,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 46,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 78 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "reloptions_test",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 23,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_vacuum_cost_delay",
                "defnamespace": "toast",
                "location": 50,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 15,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "s",
                "is_local": true,
                "location": 32,
                "typeName": {
                  "location": 34,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "varchar",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 84 1`] = `[Error: syntax error at or near "\\"]`;

exports[`reloptions.sql > line 87 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "List": {
                    "items": [
                      {
                        "DefElem": {
                          "arg": {
                            "Integer": {
                              "ival": 24,
                            },
                          },
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "autovacuum_vacuum_cost_delay",
                          "defnamespace": "toast",
                          "location": 35,
                        },
                      },
                    ],
                  },
                },
                "subtype": "AT_SetRelOptions",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 89 1`] = `[Error: syntax error at or near ":"]`;

exports[`reloptions.sql > line 90 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "List": {
                    "items": [
                      {
                        "DefElem": {
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "autovacuum_vacuum_cost_delay",
                          "defnamespace": "toast",
                          "location": 37,
                        },
                      },
                    ],
                  },
                },
                "subtype": "AT_ResetRelOptions",
              },
            },
          ],
          "objtype": "OBJECT_TABLE",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 92 1`] = `[Error: syntax error at or near ":"]`;

exports[`reloptions.sql > line 93 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 42,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "not_existing_option",
                "defnamespace": "toast",
                "location": 97,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 66,
            "relname": "reloptions_test2",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "i",
                "is_local": true,
                "location": 84,
                "typeName": {
                  "location": 86,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 96 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "reloptions_test",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 99 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 23,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_vacuum_cost_delay",
                "defnamespace": "toast",
                "location": 50,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 24,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "autovacuum_vacuum_cost_delay",
                "location": 92,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 40,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 127,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 15,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "s",
                "is_local": true,
                "location": 32,
                "typeName": {
                  "location": 34,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "varchar",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 103 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 25,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 40,
                },
              },
              "location": 44,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 46,
                      "sval": {
                        "sval": "reloptions_test",
                      },
                    },
                  },
                  "location": 63,
                  "typeName": {
                    "location": 65,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 105 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              "location": 43,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "SubLink": {
                  "location": 45,
                  "subLinkType": "EXPR_SUBLINK",
                  "subselect": {
                    "SelectStmt": {
                      "fromClause": [
                        {
                          "RangeVar": {
                            "inh": true,
                            "location": 74,
                            "relname": "pg_class",
                            "relpersistence": "p",
                          },
                        },
                      ],
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 55,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "reltoastrelid",
                                    },
                                  },
                                ],
                                "location": 55,
                              },
                            },
                          },
                        },
                      ],
                      "whereClause": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "oid",
                                  },
                                },
                              ],
                              "location": 89,
                            },
                          },
                          "location": 93,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "TypeCast": {
                              "arg": {
                                "A_Const": {
                                  "location": 95,
                                  "sval": {
                                    "sval": "reloptions_test",
                                  },
                                },
                              },
                              "location": 112,
                              "typeName": {
                                "location": 114,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "regclass",
                                    },
                                  },
                                ],
                                "typemod": -1,
                              },
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 107 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "reloptions_test_idx",
          "indexParams": [
            {
              "IndexElem": {
                "name": "s",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 30,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 111,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 85,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 113 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              "location": 43,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 45,
                      "sval": {
                        "sval": "reloptions_test_idx",
                      },
                    },
                  },
                  "location": 66,
                  "typeName": {
                    "location": 68,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 114 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "reloptions_test_idx",
          "indexParams": [
            {
              "IndexElem": {
                "name": "s",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 2,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "not_existing_option",
                "location": 112,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 85,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 118 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "reloptions_test_idx",
          "indexParams": [
            {
              "IndexElem": {
                "name": "s",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 2,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "defnamespace": "not_existing_ns",
                "location": 64,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 37,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 120 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "reloptions_test_idx2",
          "indexParams": [
            {
              "IndexElem": {
                "name": "s",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 1,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 89,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 63,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 123 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "reloptions_test_idx2",
          "indexParams": [
            {
              "IndexElem": {
                "name": "s",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "Integer": {
                    "ival": 130,
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "fillfactor",
                "location": 64,
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 38,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 124 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "List": {
                    "items": [
                      {
                        "DefElem": {
                          "arg": {
                            "Integer": {
                              "ival": 40,
                            },
                          },
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "fillfactor",
                          "location": 54,
                        },
                      },
                    ],
                  },
                },
                "subtype": "AT_SetRelOptions",
              },
            },
          ],
          "objtype": "OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 29,
            "relname": "reloptions_test_idx",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 127 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              "location": 43,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 45,
                      "sval": {
                        "sval": "reloptions_test_idx",
                      },
                    },
                  },
                  "location": 66,
                  "typeName": {
                    "location": 68,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 128 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "IndexStmt": {
          "accessMethod": "btree",
          "idxname": "reloptions_test_idx3",
          "indexParams": [
            {
              "IndexElem": {
                "name": "s",
                "nulls_ordering": "SORTBY_NULLS_DEFAULT",
                "ordering": "SORTBY_DEFAULT",
              },
            },
          ],
          "relation": {
            "inh": true,
            "location": 78,
            "relname": "reloptions_test",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 131 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "AlterTableStmt": {
          "cmds": [
            {
              "AlterTableCmd": {
                "behavior": "DROP_RESTRICT",
                "def": {
                  "List": {
                    "items": [
                      {
                        "DefElem": {
                          "arg": {
                            "Integer": {
                              "ival": 40,
                            },
                          },
                          "defaction": "DEFELEM_UNSPEC",
                          "defname": "fillfactor",
                          "location": 39,
                        },
                      },
                    ],
                  },
                },
                "subtype": "AT_SetRelOptions",
              },
            },
          ],
          "objtype": "OBJECT_INDEX",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "reloptions_test_idx3",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`reloptions.sql > line 132 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 24,
                "relname": "pg_class",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "reloptions",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "oid",
                      },
                    },
                  ],
                  "location": 39,
                },
              },
              "location": 43,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "TypeCast": {
                  "arg": {
                    "A_Const": {
                      "location": 45,
                      "sval": {
                        "sval": "reloptions_test_idx3",
                      },
                    },
                  },
                  "location": 67,
                  "typeName": {
                    "location": 69,
                    "names": [
                      {
                        "String": {
                          "sval": "regclass",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;
